# project-soko-data

./: .gitignore  DOCKER.md  LICENSE  README.md  docker-compose.yml
java-api/: .gitignore  pom.xml
java-api/src/main/java/com/projectsokodata/javaapi/: NseApiApplication.java
java-api/src/main/java/com/projectsokodata/javaapi/config/: RateLimiterConfig.java  RatelimitConfig.java  RedisConfig.java
java-api/src/main/java/com/projectsokodata/javaapi/controller/: DebugController.java  QuoteController.java
java-api/src/main/java/com/projectsokodata/javaapi/filter/: RateLimiterFilter.java
java-api/src/main/java/com/projectsokodata/javaapi/model/: Quote.java
java-api/src/main/java/com/projectsokodata/javaapi/service/: QuoteService.java  RatelimiterService.java  RedisService.java
java-api/src/main/resources/: application.properties
java-api/src/test/java/com/projectsokodata/javaapi/: NseApiApplicationTests.java
python-scrapper/: .dockerignore  .gitignore  Dockerfile  README.md  config.py  fetcher.py  main.py  parser.py  pyproject.toml  requirements.txt  scheduler.py  streamer.py
python-scrapper/tests/: conftest.py  test_fetcher.py  test_main.py  test_parser.py  test_streamer.py
scripts/: build.bat  build.sh
